Release 2.0.0rc
Release notes are available at:
https://docs.dremio.com/release-notes/20-release-notes.html