@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!--
 
-    Copyright (C) 2017 Dremio Corporation
+    Copyright (C) 2017-2018 Dremio Corporation
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -21,16 +21,11 @@
   <parent>
     <groupId>com.dremio.distribution</groupId>
     <artifactId>dremio-distribution-parent</artifactId>
-    <version>1.4.9-201802191836310213_7195059</version>
+    <version>2.0.0-201804102150500749-ee1ef6c</version>
   </parent>
 
   <artifactId>dremio-jdbc-driver</artifactId>
   <name>Distribution - All-in-one JDBC JAR</name>
-
-  <!-- use backticks for all tests -->
-  <properties>
-    <enable-backticks>true</enable-backticks>
-  </properties>
 
   <dependencies>
 
@@ -393,6 +388,14 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <configLocation>src/main/checkstyle/checkstyle-config.xml</configLocation>
+          <suppressionsLocation>src/main/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
+        </configuration>
+      </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -472,7 +475,7 @@
         <configuration>
           <argLine>-Xms512m -Xmx3g -Ddremio.exec.http.enabled=false -Djava.net.preferIPv4Stack=true
             -Dcom.dremio.exec.server.SabotNode.system_options="com.dremio.exec.compile.ClassTransformer.scalar_replacement=on"
-            -XX:MaxPermSize=256M -XX:MaxDirectMemorySize=3072M
+            -XX:MaxDirectMemorySize=3072M
             -XX:+CMSClassUnloadingEnabled -ea</argLine>
           <additionalClasspathElements>
             <additionalClasspathElements>${settings.localRepository}/junit/junit/4.12/junit-4.12.jar</additionalClasspathElements>
@@ -487,7 +490,6 @@
             <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
             <app.class.path>${app.class.path}</app.class.path>
             <project.version>${project.version}</project.version>
-            <dremio.legacy.backticks_for_identifiers>${enable-backticks}</dremio.legacy.backticks_for_identifiers>
           </systemPropertyVariables>
         </configuration>
       </plugin>
